# Grid_Based_Planning_Tutorial

./: README.md
ros2/src/gbp_common/: CMakeLists.txt  package.xml
ros2/src/gbp_common/launch/: view_map.launch.py
ros2/src/gbp_common/maps/: simple_room.pgm  simple_room.yaml
ros2/src/gbp_common/rviz/: lecture1_grid.rviz
ros2/src/gbp_common/worlds/: simple_room.world
ros2/src/gbp_planning_demos/: package.xml  setup.cfg  setup.py
ros2/src/gbp_planning_demos/gbp_planning_demos/algorithms/: astar.py  bfs.py  dfs.py  dijkstra.py
ros2/src/gbp_planning_demos/gbp_planning_demos/nodes/: simple_grid_planner.py
ros2/src/gbp_planning_demos/gbp_planning_demos/utils/: costmap.py  gridmap.py  search_utils.py
ros2/src/gbp_planning_demos/launch/: demo_astar.launch.py  demo_dfs_bfs.launch.py  demo_dijkstra.launch.py  path_planning.launch.py
windows_demo/: run_compare.py
windows_demo/algorithms/: astar.py  bfs.py  dfs.py  dijkstra.py
