<?xml version="1.0"?>
<package format="3">
  <name>gbp_common</name>
  <version>0.0.1</version>
  <description>Common resources (maps, rviz configs, worlds) for Grid-Based Planning tutorial</description>

  <maintainer email="jth8090@khu.ac.rk">Taehyun Jung</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>

  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
</package>
